.provarCaches/00D410000011HE0EAM/objects/rstkf__arcashd__c.object
<CustomObject>
    <description>arcashd__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_applycustgroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply to Whole Customer Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_arappliccount__c</fullName>
        <label>Number of Receivable Application Trans</label>
        <summaryForeignKey>rstkf__arapplic__c.rstkf__arapplic_arcashd__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_arcashh__c</fullName>
        <label>Cash Receipts</label>
        <referenceTo>rstkf__arcashh__c</referenceTo>
        <relationshipLabel>Cash Receipts Details</relationshipLabel>
        <relationshipName>arcashds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_bankamt__c</fullName>
        <label>Customer Pay Amount - Bank Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_bankglcash__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash to GL Total - Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_bankhomerounding__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rounding Var - Bank to Home</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_bankunapplcash__c</fullName>
        <label>Z_OBSOLETE</label>
        <summarizedField>rstkf__arapplic__c.rstkf__arapplic_unapplcashbank__c</summarizedField>
        <summaryForeignKey>rstkf__arapplic__c.rstkf__arapplic_arcashd__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_bankunapplcashusedup__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unapplied Cash Used Up - Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_bankunapplied__c</fullName>
        <formula>rstkf__arcashd_bankamt__c - rstkf__arcashd_netcashbank__c - rstkf__arcashd_bankunappliedcash__c - rstkf__arcashd_bankunapplcashusedup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amt. Remaining to Apply - Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_bankunappliedcash__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unapplied Cash – Bank  Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_checkedouton__c</fullName>
        <label>Payment was Locked on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_checkedoutto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment is Locked by</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>Cash Receipts Details</relationshipLabel>
        <relationshipName>arcashds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_checkorref__c</fullName>
        <label>Check # or Other Payment Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_crcashbank__c</fullName>
        <label>CR Total Applied - Bank Currency</label>
        <summarizedField>rstkf__arapplic__c.rstkf__arapplic_cashcrbank__c</summarizedField>
        <summaryForeignKey>rstkf__arapplic__c.rstkf__arapplic_arcashd__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_crcashhome__c</fullName>
        <label>CR Total Applied - Home Currency</label>
        <summarizedField>rstkf__arapplic__c.rstkf__arapplic_cashcrhome__c</summarizedField>
        <summaryForeignKey>rstkf__arapplic__c.rstkf__arapplic_arcashd__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_crcashpay__c</fullName>
        <label>CR Total Applied - Payment Currency</label>
        <summarizedField>rstkf__arapplic__c.rstkf__arapplic_cashcrpay__c</summarizedField>
        <summaryForeignKey>rstkf__arapplic__c.rstkf__arapplic_arcashd__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_drcashbank__c</fullName>
        <label>DR Total Applied - Bank Currency</label>
        <summarizedField>rstkf__arapplic__c.rstkf__arapplic_cashdrbank__c</summarizedField>
        <summaryForeignKey>rstkf__arapplic__c.rstkf__arapplic_arcashd__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_drcashhome__c</fullName>
        <label>DR Total Applied - Home Currency</label>
        <summarizedField>rstkf__arapplic__c.rstkf__arapplic_cashdrhome__c</summarizedField>
        <summaryForeignKey>rstkf__arapplic__c.rstkf__arapplic_arcashd__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_drcashpay__c</fullName>
        <label>DR Total Applied - Payment Currency</label>
        <summarizedField>rstkf__arapplic__c.rstkf__arapplic_cashdrpay__c</summarizedField>
        <summaryForeignKey>rstkf__arapplic__c.rstkf__arapplic_arcashd__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_homeamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Customer Pay Amount - Home Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_homeglcash__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash to GL Amount - Home Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_hometopaysyforexschedno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>arcashd_hometopaysyforexschedno__c</description>
        <label>Exchange Rate Schedule (Home to Pay)</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Cash Receipts Details</relationshipLabel>
        <relationshipName>arcashd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_homeunapplcash__c</fullName>
        <label>Z_OBSOLETE</label>
        <summarizedField>rstkf__arapplic__c.rstkf__arapplic_unapplcashhome__c</summarizedField>
        <summaryForeignKey>rstkf__arapplic__c.rstkf__arapplic_arcashd__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_homeunapplcashusedup__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unapplied Cash Used Up - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_homeunapplied__c</fullName>
        <formula>rstkf__arcashd_homeamt__c - rstkf__arcashd_netcashhome__c - rstkf__arcashd_homeunappliedcash__c - rstkf__arcashd_homeunapplcashusedup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amt. Remaining to Apply - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_homeunappliedcash__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unapplied Cash – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_mainthomeexchrate__c</fullName>
        <label>Exchange Rate (Maint to Home)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_mainttohomesyforexschedno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>arcashd_mainttohomesyforexschedno__c</description>
        <label>Exchange Rate Schedule (Maint to Home)</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Cash Receipts Details (Exchange Rate Schedule (Maint to Home))</relationshipLabel>
        <relationshipName>arcashd1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_needsreapplication__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field indicates that a Deposit Date change has been made after the deposit was created, but the associated distributions have not been revised to reflect the new deposit date.  This is a very rare condition, caused by a single batch failure done as part of a several batch process.</inlineHelpText>
        <label>Date Change Application Adjustment Reqd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_netcashbank__c</fullName>
        <formula>rstkf__arcashd_drcashbank__c + rstkf__arcashd_bankglcash__c - rstkf__arcashd_crcashbank__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Cash Consumed - Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_netcashhome__c</fullName>
        <formula>rstkf__arcashd_drcashhome__c + rstkf__arcashd_homeglcash__c - rstkf__arcashd_crcashhome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Cash Consumed - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_netcashpay__c</fullName>
        <formula>rstkf__arcashd_drcashpay__c + rstkf__arcashd_payglcash__c - rstkf__arcashd_crcashpay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Cash Consumed - Payment Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_netconsumedbank__c</fullName>
        <formula>rstkf__arcashd_drcashbank__c - rstkf__arcashd_crcashbank__c + rstkf__arcashd_bankglcash__c + rstkf__arcashd_bankunappliedcash__c + rstkf__arcashd_bankunapplcashusedup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total Consumed – Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_netconsumedhome__c</fullName>
        <formula>rstkf__arcashd_drcashhome__c - rstkf__arcashd_crcashhome__c + rstkf__arcashd_homeglcash__c + rstkf__arcashd_homeunappliedcash__c + rstkf__arcashd_homeunapplcashusedup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total Consumed – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_netconsumedpay__c</fullName>
        <formula>rstkf__arcashd_drcashpay__c - rstkf__arcashd_crcashpay__c + round(rstkf__arcashd_homeglcash__c * rstkf__arcashd_payhomeexchrate__c, 2) + rstkf__arcashd_payunappliedcash__c + rstkf__arcashd_payunapplcashusedup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total Consumed – Pay Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_nopay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_payamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Customer Pay Amount - Pay Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_paybankexchrate__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Exchange Rate (Pay to Bank)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_paybankrounding__c</fullName>
        <label>Applied Amount Rounding Diff - Bank</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_paycurr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Payment Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Cash Receipts Details</relationshipLabel>
        <relationshipName>arcashds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_paycust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Who Has Paid</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Cash Receipts Details</relationshipLabel>
        <relationshipName>arcashds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_paycustcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer-Company Who Has Paid</label>
        <referenceTo>rstkf__socustcmpno__c</referenceTo>
        <relationshipLabel>Cash Receipts Details</relationshipLabel>
        <relationshipName>arcashds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_payglcash__c</fullName>
        <formula>round(rstkf__arcashd_homeglcash__c * rstkf__arcashd_payhomeexchrate__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash to GL Total - Pay Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_payhomeexchrate__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Exchange Rate (Home to Pay)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_paymenttype__c</fullName>
        <label>Customer Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                    <default>true</default>
                    <label>Check</label>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Credit Card at Cash Receipts</fullName>
                </value>
                <value>
                    <fullName>EFT</fullName>
                </value>
                <value>
                    <fullName>No Payment</fullName>
                </value>
                <value>
                    <fullName>Cash to GL</fullName>
                    <isActive>false</isActive>
                    <label>Cash to GL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_payseq__c</fullName>
        <label>Customer Payment Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_paytobanksyforexschedno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>arcashd_paytobanksyforexschedno__c</description>
        <label>Exchange Rate Schedule (Pay to Bank)</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Cash Receipts Details (Exchange Rate Schedule (Pay to Bank))</relationshipLabel>
        <relationshipName>arcashd2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_payunapplcashusedup__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unapplied Cash Used Up - Pay Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_payunapplied__c</fullName>
        <formula>rstkf__arcashd_payamt__c - rstkf__arcashd_netcashpay__c - rstkf__arcashd_payunappliedcash__c - rstkf__arcashd_payunapplcashusedup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amt. Remaining to Apply - Pay Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_payunappliedcash__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unapplied Cash – Pay Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_roundingcracct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rounding Difference Credit Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Cash Receipts Details (Rounding Difference Credit Account)</relationshipLabel>
        <relationshipName>arcashds01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_roundingdracct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rounding Difference Debit Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Cash Receipts Details</relationshipLabel>
        <relationshipName>arcashds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_roundingstatus__c</fullName>
        <label>Rounding Difference Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Not yet posted</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>No Posting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_totalcredits__c</fullName>
        <label>Total Credits</label>
        <summarizedField>rstkf__arcashddist__c.rstkf__arcashddist_cramt__c</summarizedField>
        <summaryForeignKey>rstkf__arcashddist__c.rstkf__arcashddist_arcashd__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_totalcreditscash__c</fullName>
        <label>Total Credits Cash</label>
        <summarizedField>rstkf__arcashddist__c.rstkf__arcashddist_cramtcash__c</summarizedField>
        <summaryForeignKey>rstkf__arcashddist__c.rstkf__arcashddist_arcashd__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_totaldebits__c</fullName>
        <label>Total Debits</label>
        <summarizedField>rstkf__arcashddist__c.rstkf__arcashddist_dramt__c</summarizedField>
        <summaryForeignKey>rstkf__arcashddist__c.rstkf__arcashddist_arcashd__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashd_totaldebitscash__c</fullName>
        <label>Total Debits Cash</label>
        <summarizedField>rstkf__arcashddist__c.rstkf__arcashddist_dramtcash__c</summarizedField>
        <summaryForeignKey>rstkf__arcashddist__c.rstkf__arcashddist_arcashd__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__arcashd_arcashh__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;  rstkf__arcashd_payseq__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__arcashd_arcashh__r.Name  &amp; &apos;-&apos; &amp; rstkf__arcashd_payseq__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Cash Receipts Detail</label>
    <listViews>
        <fullName>Cash_Receipts_Details_AC</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcashd_arcashh__c</columns>
        <columns>rstkf__arcashd_paycust__c</columns>
        <columns>rstkf__arcashd_paymenttype__c</columns>
        <columns>rstkf__arcashd_totalcredits__c</columns>
        <columns>rstkf__arcashd_totaldebits__c</columns>
        <columns>rstkf__arcashd_checkorref__c</columns>
        <columns>rstkf__arcashd_homeamt__c</columns>
        <columns>rstkf__arcashd_homeglcash__c</columns>
        <columns>rstkf__arcashd_netcashhome__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__arcashd_homeunapplied__c</columns>
        <columns>rstkf__arcashd_crcashhome__c</columns>
        <columns>rstkf__arcashd_drcashhome__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Cash Receipts Details-AC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__Cash_Receipts_Details_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcashd_arcashh__c</columns>
        <columns>rstkf__arcashd_nopay__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__arcashd_nopay__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Cash Receipts Details - Filtered</label>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Cash_Receipts_Details</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcashd_arcashh__c</columns>
        <columns>rstkf__arcashd_paycust__c</columns>
        <columns>rstkf__arcashd_paymenttype__c</columns>
        <columns>rstkf__arcashd_totalcredits__c</columns>
        <columns>rstkf__arcashd_totaldebits__c</columns>
        <columns>rstkf__arcashd_checkorref__c</columns>
        <columns>rstkf__arcashd_homeamt__c</columns>
        <columns>rstkf__arcashd_homeglcash__c</columns>
        <columns>rstkf__arcashd_netcashhome__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__arcashd_homeunapplied__c</columns>
        <columns>rstkf__arcashd_crcashhome__c</columns>
        <columns>rstkf__arcashd_drcashhome__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>11/10/2021 12:00 AM</value>
        </filters>
        <label>Cash Receipts Details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Cash_Receipts_Details_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcashd_arcashh__c</columns>
        <columns>rstkf__arcashd_paycust__c</columns>
        <columns>rstkf__arcashd_paymenttype__c</columns>
        <columns>rstkf__arcashd_totalcredits__c</columns>
        <columns>rstkf__arcashd_totaldebits__c</columns>
        <columns>rstkf__arcashd_checkorref__c</columns>
        <columns>rstkf__arcashd_homeamt__c</columns>
        <columns>rstkf__arcashd_homeunapplcash__c</columns>
        <columns>rstkf__arcashd_homeglcash__c</columns>
        <columns>rstkf__arcashd_netcashhome__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__arcashd_homeunapplied__c</columns>
        <columns>rstkf__arcashd_crcashhome__c</columns>
        <columns>rstkf__arcashd_drcashhome__c</columns>
        <filterScope>Everything</filterScope>
        <label>Cash Receipts Details - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cash Receipts Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstkf__arcashd_payamt_cannot_be_less_than_zero</fullName>
        <active>true</active>
        <description>arcashd_payamt__c cannot be less than Zero</description>
        <errorConditionFormula>rstkf__arcashd_payamt__c &lt; 0</errorConditionFormula>
        <errorMessage>Customer Pay Amount - Pay Curr cannot be less than Zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__currency_validation</fullName>
        <active>true</active>
        <description>The selected customer must do business in the bank account currency.</description>
        <errorConditionFormula>!ISBLANK(rstkf__arcashd_paycurr__c) &amp;&amp; rstkf__arcashd_paycurr__c != rstkf__arcashd_arcashh__r.rstkf__arcashh_glbankacct__r.rstkf__glbankacct_curr__c</errorConditionFormula>
        <errorMessage>The selected Customer must do business in the Bank Account Currency.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__payunapplied_cannot_be_less_than_zero</fullName>
        <active>true</active>
        <description>Amount applied cannot exceed the Customer Payment Amount</description>
        <errorConditionFormula>rstkf__arcashd_payunapplied__c &lt; 0</errorConditionFormula>
        <errorMessage>Amount applied cannot exceed the Customer Payment Amount</errorMessage>
    </validationRules>
</CustomObject>